Fix width on mobile

--- a/src/components/common/Dropdowns/Select/Select.module.scss
+++ b/src/components/common/Dropdowns/Select/Select.module.scss
@@ -24,7 +24,7 @@ $height-m: 48px;
   @include transition;
 
   @include media(m-device) {
-    width: calc(100vw - 80px);
+    width: 90vw;
   }
 
   &__arrow {
