--- a/src/components/common/FaqCollapsible/FaqCollapsible.module.scss
+++ b/src/components/common/FaqCollapsible/FaqCollapsible.module.scss
@@ -65,7 +65,7 @@
     padding: 128px 0 128px 0;
 
     @include media(m-device) {
-      width: calc(100vw - 80px);
+      width: 90vw;
       padding: 56px 0 56px 0;
     }
 
