--- a/src/components/lpc/Home/01-Landing/Landing.module.scss
+++ b/src/components/lpc/Home/01-Landing/Landing.module.scss
@@ -45,7 +45,7 @@
       margin: 0 0 0 8px;
       @include media(m-device) {
         height: 48px;
-        width: calc(100vw - 80px);
+        width: 90vw;
         margin: 16px 0 0 0;
       }
     }
@@ -74,6 +74,7 @@
 
 @keyframes elastic {
   0% {
+    opacity: 0;
     transform: scale(1, 1) translateY(350px);
   }
   10% {
@@ -92,6 +93,7 @@
     transform: scale(1, 1) translateY(0);
   }
   100% {
+    opacity: 1;
     transform: scale(1, 1) translateY(0px);
   }
 }
