--- a/src/components/lpc/PartnersNetwork/Favorites/Favorites.module.scss
+++ b/src/components/lpc/PartnersNetwork/Favorites/Favorites.module.scss
@@ -22,7 +22,7 @@
     width: 100vw;
     margin: 0 auto;
     @include media(m-device) {
-      width: calc(100vw - 80px);
+      width: 90vw;
     }
   }
 
