--- a/src/components/lpc/PaymentOptions/GiftCard/BrandsChoice/BrandsChoice.module.scss
+++ b/src/components/lpc/PaymentOptions/GiftCard/BrandsChoice/BrandsChoice.module.scss
@@ -18,7 +18,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 80vw;
+    width: 90vw;
     @include media(m-device) {
       flex-direction: column;
       align-items: center;
@@ -34,7 +34,7 @@
       padding: 0 10% 0 10%;
       width: 50%;
       @include media(m-device) {
-        width: calc(100vw - 80px) !important;
+        width: 90vw !important;
         margin-bottom: 32px;
       }
 
