--- a/src/components/lpc/PaymentOptions/GiftCard/BrandsChoice/BrandsGrid/BrandsGrid.module.scss
+++ b/src/components/lpc/PaymentOptions/GiftCard/BrandsChoice/BrandsGrid/BrandsGrid.module.scss
@@ -6,13 +6,9 @@
 .brands {
   width: 650px;
   height: 906px;
-  overflow: hidden;
   @include media(m-device) {
     height: 216px;
     width: auto;
-    overflow: hidden;
-
-
   }
 
 
