--- a/src/pages/lpc/gift-card-page/GiftCardPage.module.scss
+++ b/src/pages/lpc/gift-card-page/GiftCardPage.module.scss
@@ -19,7 +19,7 @@ body {
   height: 100vh;
   width: 100vw;
   @include media(m-device) {
-    width: calc(100vw - 80px);
+    width: 90vw;
     padding-top: 94px;
 
   }
